MavenJUnitPatcher: fix if somebody uses @argLine property not with JaCoCo (IDEA-228352)
GitOrigin-RevId: cd08e7eac5cf93f52b72664543564c01b8558ec2